--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La palette du goût</h3>
-                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                        
+                                        <input type="checkbox" id="like" class="btn__check">
+                                            <label for="like" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>                                      
                                     </div>
                                     <p class="card-subtitle">Ménilmontant</p>
                                 </div>                                
@@ -85,7 +89,11 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La note enchantée</h3>
-                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                 
+                                        <input type="checkbox" id="like" class="btn__check">
+                                            <label for="like" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>                                    
                                     </div>
                                     <p>Charonne</p>
                                 </div>                                
@@ -101,7 +109,11 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">A la française</h3>
-                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                             
+                                        <input type="checkbox" id="like" class="btn__check">
+                                            <label for="like" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>                                
                                     </div>
                                     <p>Cité Rouge</p>
                                 </div>                                
@@ -117,7 +129,11 @@
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">Le délice des sens</h3>
-                                        <button type="submit" class="btn-like" aria-label="Like"><i class="fa-regular fa-heart"></i></button>                                 
+                                        <input type="checkbox" id="like" class="btn__check">
+                                            <label for="like" class="btn">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <i class="fa-solid fa-heart btn__bg"></i>
+                                            </label>                                    
                                     </div>
                                     <p>Folie-Méricourt</p>
                                 </div>                                
